# xx2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  xx2d.sln
3rd/glad/: CMakeLists.txt
3rd/xxlib/: xx_data.h  xx_string.h
DX11Test1/: DX11Test1.vcxproj  DX11Test1.vcxproj.filters  Game.cpp  xx_data.h  xx_math.h  xx_scopeguard.h  xx_typehelpers.h
DX11Test2/: DX11Test2.vcxproj  DX11Test2.vcxproj.filters  main.cpp
DX11Test3/: DX11Test3.vcxproj  DX11Test3.vcxproj.filters  Game.cpp  Game.h  Main.cpp
DX11Test4/: DX11Test4.vcxproj  Game.cpp
_bak/DX11Test1/: 2.dds  DX11Test1.vcxproj  Game.cpp  Game.h  pch.h  resource.aps
_bak/DX11Test2/: DX11Test2.vcxproj  main.cpp
_bak/DX11Test3/: DX11Test3.vcxproj  Game.cpp
_bak/DX11Test4/: DX11Test4.vcxproj  DX11Test4.vcxproj.filters  Game.h  PixelShader.hlsl  VertexShader.hlsl  pch.h
_bak/res/: b.pkm  (+8 more)
android_cpp_test1/: .gitignore
coco/: AppDelegate.cpp  AppDelegate.h  CCGeometry.h  Primitives.h  coco.vcxproj  coco.vcxproj.filters  main.cpp  pch.h
coco_dx/: AppDelegate.cpp  AppDelegate.h  coco_dx.vcxproj  coco_dx.vcxproj.filters  pch.h
cocos_webm_wasm_bak/: AppDelegate.cpp  Env.cpp  Env.h  HelloWorldScene.cpp  HelloWorldScene.h  Logic.cpp  Logic.h  Wasm3.hpp  logic.wasm  logic_compile_wasm.bat  xx_xxmv_cocos.h  zhangyu.xxmv
doc/: box-circle-cross.excalidraw  urls.txt
examples/: game_looper.cpp  game_looper.h  logic0.cpp  logic0.h  logic1.cpp  logic1.h  logic10.cpp  logic10.h  logic11.cpp  logic11.h  logic12.cpp  logic12.h  logic13.cpp  logic13.h  logic14.cpp  logic14.h  logic15.cpp  logic15.h  logic2.cpp  logic2.h  logic3.cpp  logic3.h  logic4.cpp  logic4.h  logic5.cpp  logic5.h  logic6.cpp  logic6.h  logic7.cpp  logic7.h  logic8.cpp  logic8.h  logic9.cpp  logic9.h  logic_base.h  main.cpp  main.h  s0_main_menu.cpp  s0_main_menu.h  s10_quads.cpp  (+50 more)
examples_android/: .gitignore  CMakeLists.txt  main.cpp
examples_android/android/: .gitignore  build.gradle
examples_android/android/app/: build.gradle  proguard-rules.pro
examples_android/android/app/src/main/: AndroidManifest.xml
examples_android/android/app/src/main/java/: MainActivity.kt
examples_android/app/: build.gradle
examples_android/app/release/: app-release.apk  output-metadata.json
examples_android/app/src/main/: AndroidManifest.xml
glad/: glad.c  glad.h  gles2.h
glad_es3_wgl_test1/: gl.c  gl.h  glad_es3_wgl_test1.sln  glad_es3_wgl_test1.vcxproj  glad_es3_wgl_test1.vcxproj.filters  glhelpers.cpp  glhelpers.h  logic.cpp  logic.h  main.cpp  main.h  pch.h  wgl.h
gles3test1/: esMatrix.h  gles3test1.vcxproj  gles3test1.vcxproj.filters  glmanager.hpp  glshadermanager.hpp  gltest1.hpp  gltest2.hpp  gltest3.hpp  gltest4.hpp  gltest5.hpp  main.cpp
gles3test2/: bak.txt  esBase.h  esMatrix.h  gles3test2.vcxproj  gles3test2.vcxproj.filters  main.cpp  texLoader.h
gles3test3/: camera.hh  esBase.h  gles3test3.vcxproj  gles3test3.vcxproj.filters  main.cpp  vmath.hh
glew/: glew32s.lib
glfw/: glfw3.lib
godot_frog/: icon.gd  project.godot
headers/: xx2d_fps_viewer.h
imgui_cmake/: CMakeLists.txt
lua_cmake/: CMakeLists.txt
res/: 3.ktx  3500.bmfc  a.webm  a.xxmv  aaa.pkm  aaa.plist  all.pkm  b.pkm  basechars.fnt  basechars_0.pkm  bomb.pkm  bomb.plist  judaxiaochouyu.webm  movepath.json  p1.pkm  p2.pkm  qiyu.webm  st_k10.xxmv  st_k100.webm  st_k100.xxmv  st_m_50.webm  st_m_50.webm.xxmv  sword.astc  sword.pkm  sword.pkm.zstd  sword.plist  test1.lua  test2.lua  test3.lua  test3_1.lua  tree.pkm  tree.plist  ww.pkm  ww.plist  ww.webm  xiaoshuimu.webm  zm.pkm  zm.plist
src/: _bak.cpp  animframe.cpp  animframe.h  bmfont.cpp  bmfont.h  calc.h  engine.cpp  engine.h  engine_autobatch.cpp  engine_filesystem.cpp  engine_fonts.cpp  engine_framecache.cpp  engine_input.cpp  engine_texturecache.cpp  enums.h  event_listeners.h  filesystem.h  glbase.cpp  glbase.h  glhelpers.cpp  glhelpers.h  glres.h  glshaders.cpp  glutils.cpp  glutils.h  label.cpp  label.h  linestrip.cpp  linestrip.h  logic.cpp  logic.h  logic0.cpp  logic0.h  logic1.cpp  logic1.h  logic10.cpp  logic10.h  logic11.cpp  logic11.h  logic12.cpp  (+141 more)
structTest1/: All.h  Node.cpp  Node.h  Node.hh  Node.hpp  Ref.h  Ref.hpp  SceneTree.cpp  SceneTree.h  SceneTree.hpp  Signal.cpp  Signal.h  Signal.hpp  Timer.h  Timer.hpp  Viewport.cpp  Viewport.h  bak.txt  main.cpp  structTest1.vcxproj  structTest1.vcxproj.filters
structTest2/: AABBCD.cpp  AABBCD.h  LinkPool.h  Space2dIndex.h  Space2dIndex2.h  Space2dPointIndex.h  TexturePackerReader.h  main.cpp  structTest2.vcxproj  structTest2.vcxproj.filters
structTest3/: LinkPool.h  main.cpp  structTest3.vcxproj  structTest3.vcxproj.filters  xx_combopool.h  xx_linkpool.h
structTest4/: Space2dPointIndex.h  ajson.hpp  main.cpp  structTest4.vcxproj  structTest4.vcxproj.filters  xx_data.h  xx_fixeddata.h  xx_logger.h
structTest5/: a.xxmv  main.cpp  structTest5.vcxproj  structTest5.vcxproj.filters  xx_webm.h  xx_xxmv_cocos.h
structTest6/: main.cpp  structTest6.vcxproj  structTest6.vcxproj.filters
tests/: bak.txt  main.cpp  main.h  main_lua_bmfont.hpp  main_lua_engine.hpp  main_lua_fpsviewer.hpp  main_lua_global.hpp  main_lua_quad.hpp  main_lua_shared_frame.hpp  main_lua_shared_gltexture.hpp  main_lua_simple_label.hpp
tests2/: main.cpp  main.h
tests3/: main.cpp  main.h
tests4/: main.cpp  main.h
tiledmap/: a.json  tm.cs
tools/: EtcTool_Readme.txt  drag_file_here_zstd.bat  drag_png_here_convert_pkm_etc2_rgba8.bat
vpx_yuv/: yuv.lib
xx2d/: AppDelegate.cpp  AppDelegate.h  PlatformMacros.h  Structs.h  main.cpp  xx2d.vcxproj  xx2d.vcxproj.filters
xxlib/: xx.natvis  xx_charsutils.hpp  xx_chrono.h  xx_combopool.h  xx_coro.h  xx_coro_simple.h  xx_data.h  xx_ecs.h  xx_file.h  xx_hashutils.hpp  xx_includes.h  xx_list.h  xx_list.hpp  xx_listdoublelink.h  xx_listlink.h  xx_lua.h  xx_lua_bind.h  xx_lua_data.h  xx_lua_shared.h  xx_math.h  xx_mem.h  xx_obj.h  xx_pos.h  xx_ptr.h  xx_queue.h  xx_queue.hpp  xx_string.h  xx_string.hpp  xx_task.h  xx_typehelpers.h  xx_typename_islambda.h  xx_typetraits.h
yuv/: yuv.lib  yuvd.lib  yuvmt.lib  yuvmtd.lib
(+174 files in other folders)
